--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "npm install ; jspm install",
     "test": "echo 'test'",
     "js": "jspm bundle-sfx index index.min.js",
     "watch": "watch 'npm run js' ./"
@@ -24,20 +25,26 @@
     "url": "https://github.com/SpinbitZ/cycle-mvi/issues"
   },
   "homepage": "https://github.com/SpinbitZ/cycle-mvi#readme",
+  "devDependencies": {
+    "rx": "^4.1.0",
+    "rxjs": "^5.0.0-beta.4",
+    "watch": "^0.17.1"
+  },
   "jspm": {
     "configFile": "jspm_config.js",
     "dependencies": {
       "@cycle/core": "npm:@cycle/core@^6.0.3",
-      "@cycle/dom": "npm:@cycle/dom@^9.1.0",
-      "rxjs": "npm:rxjs@^5.0.0-beta.2"
+      "@cycle/dom": "npm:@cycle/dom@^9.2.2",
+      "@cycle/isolate": "npm:@cycle/isolate@^1.2.0",
+      "cyclejs": "npm:cyclejs@^0.26.0",
+      "rx": "npm:rx@^4.1.0",
+      "rx-dom": "npm:rx-dom@^7.0.3",
+      "rxjs": "npm:rxjs@^5.0.0-beta.4"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.24",
       "babel-runtime": "npm:babel-runtime@^5.8.24",
       "core-js": "npm:core-js@^1.1.4"
     }
-  },
-  "devDependencies": {
-    "watch": "^0.17.1"
   }
 }
